--- a/portafolio.html
+++ b/portafolio.html
@@ -96,7 +96,9 @@
             <div class="col-md-8">
                 <div class="card-body">
                     <h5 class="card-title">Calidad</h5>
-                    <p class="card-text">.</b></p>     
+                    <p class="card-text">Nuestro proceso de trabajo combina la exquisitez y la oportunidad.
+                        Escuchamos las necesidades, enseñamos diseños y materiales a utlizar, elaboramos el presupuesto.
+                    <b>Ofrecemos máxima garantía.</b></p>        
                 </div>
             </div>
         </div>
