--- a/galeria.html
+++ b/galeria.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="stylesheet" media="screen" href="portafolio.css">
+    <link rel="stylesheet" media="screen" href="galeria.css">
     <title>Hermanos Martinez</title>
 </head>
 
@@ -27,7 +27,7 @@
                 <p class="cabezote">Portafolio</p>
             </a>
             <a class="navbar-brand" href="#">
-                <p class="cabezote">Galería</p>
+                <p class="cabezoteDos">Galería</p>
             </a>
             <a class="navbar-brand" href="#">
                 <p class="cabezote">Nosotros</p>
