--- a/galeria.html
+++ b/galeria.html
@@ -41,7 +41,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
           <div class="card">
-            <img src="Fotos_Portafolio/0007.png" class="card-img-top" alt="...">
+            <img src="Fotos_Portafolio/IMG-hogar-WA0003.jpg" class="card-img-top" alt="...">
           </div>
         </div>
         <div class="col">
