--- a/galeria.html
+++ b/galeria.html
@@ -46,29 +46,17 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
+            <img src="Fotos_Portafolio/IMG-hogar-WA0004.jpg" class="card-img-top" alt="...">
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-            </div>
+            <img src="Fotos_Portafolio/IMG-hogar-WA0007.jpg" class="card-img-top" alt="...">
           </div>
         </div>
         <div class="col">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
+            <img src="Fotos_Portafolio/IMG-hogar-WA0016.jpg" class="card-img-top" alt="...">
           </div>
         </div>
       </div>
