--- a/galeria.html
+++ b/galeria.html
@@ -59,6 +59,46 @@
             <img src="Fotos_Portafolio/IMG-hogar-WA0016.jpg" class="card-img-top" alt="..." height="300">
           </div>
         </div>
+        <div class="col">
+            <div class="card">
+              <img src="Fotos_Portafolio/IMG-hogar-WA0018.jpg" class="card-img-top" alt="..." height="300">
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="Fotos_Portafolio/IMG-hogar-WA0019.jpg" class="card-img-top" alt="..." height="300">
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="Fotos_Portafolio/IMG-hogar-WA0020.jpg" class="card-img-top" alt="..." height="300">
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="Fotos_Portafolio/IMG-20210711-WA0009.jpg" class="card-img-top" alt="..." height="300">
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="Fotos_Portafolio/WA0013.jpg" class="card-img-top" alt="..." height="300">
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="Fotos_Portafolio/WA0017.jpg" class="card-img-top" alt="..." height="300">
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="Fotos_Portafolio/IMG-20210618-WA0014.jpg" class="card-img-top" alt="..." height="300">
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img src="Fotos_Portafolio/IMG-PDTO-0016.jpg" class="card-img-top" alt="..." height="300">
+            </div>
+          </div>
       </div>
 
     <footer class="bg-dark text-center text-white">
