--- a/galeria.html
+++ b/galeria.html
@@ -105,8 +105,8 @@
         </div>
     </div>
     <div id="paginasGaleria">
-        <a class="btn btn-dark" href="#" role="button">Link</a>
-        <a class="btn btn-dark" href="#" role="button">Link</a>
+        <a class="btn btn-dark" href="#" role="button">2</a>
+        <a class="btn btn-dark" href="#" role="button">3</a>
     </div>
 
     <footer class="bg-dark text-center text-white">
