--- a/nosotros.html
+++ b/nosotros.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="stylesheet" media="screen" href="galeria.css">
+    <link rel="stylesheet" media="screen" href="nosotros.css">
     <title>Hermanos Martinez</title>
 </head>
 
@@ -43,6 +43,7 @@
         <h4>Carpintería/Ebanistería</h4>
     </div>
 
+    <img src="..." class="img-thumbnail" alt="...">
 
     <footer class="bg-dark text-center text-white">
         <!-- Grid container -->
