--- a/nosotros.html
+++ b/nosotros.html
@@ -27,10 +27,10 @@
                 <p class="cabezote">Portafolio</p>
             </a>
             <a class="navbar-brand" href="#">
-                <p class="cabezoteDos">Galería</p>
+                <p class="cabezote">Galería</p>
             </a>
             <a class="navbar-brand" href="#">
-                <p class="cabezote">Nosotros</p>
+                <p class="cabezoteTres">Nosotros</p>
             </a>
             <a class="navbar-brand" href="#">
                 <p class="cabezote">Contacto</p>
@@ -43,7 +43,15 @@
         <h4>Carpintería/Ebanistería</h4>
     </div>
 
-    <img src="..." class="img-thumbnail" alt="...">
+    <div class="card mb-3">
+        <img src="Fondos/fondo-madera-morado.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+
 
     <footer class="bg-dark text-center text-white">
         <!-- Grid container -->
