--- a/nosotros.html
+++ b/nosotros.html
@@ -44,10 +44,11 @@
     </div>
 
     <div class="card mb-3">
-        <img src="Fondos/fondo-madera-morado.jpg" class="card-img-top" alt="...">
+        <img src="Fondos/fondo-madera-morado.jpg" class="card-img-top" alt="..."  height="400px">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">¿Quiénes somos?</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in 
+              to additional content. This content is a little bit longer.</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
