--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
      <!-- </a>-->
     </div>
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><p class="cabezote">Portafolio</p></a>
-      <a class="navbar-brand" href="#"><p class="cabezote">Galería</p></a>
-      <a class="navbar-brand" href="#"><p class="cabezote">Nosotros</p></a>
-      <a class="navbar-brand" href="#"><p class="cabezote">Contacto</p></a>
+      <a class="navbar-brand" href="portafolio.html"><p class="cabezote">Portafolio</p></a>
+      <a class="navbar-brand" href="galeria.html"><p class="cabezote">Galería</p></a>
+      <a class="navbar-brand" href="nosotros.html"><p class="cabezote">Nosotros</p></a>
+      <a class="navbar-brand" href="contacto.html"><p class="cabezote">Contacto</p></a>
     </div>
   </nav>
   <!--<header id="header">
