--- a/portafolio.html
+++ b/portafolio.html
@@ -18,9 +18,9 @@
 <body>
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-            <!-- <a class="navbar-brand" href="#">-->
-            <img id="logoInicio" src="Fondos/Logotipo.png" alt="" width="110" height="110">
-            <!-- </a>-->
+            <a class="navbar-brand" href="index.html">
+               <img id="logoInicio" src="Fondos/Logotipo.png" alt="" width="110" height="110">
+            </a>
         </div>
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
